Sutter Health/src/objects/Employer_Group_Data__c.object
<CustomObject>
    <description>This object is created for SCN and develop Req -3268
 It split into three parts
1.Sold case Notifaction
2. Medical Plan
3.Non standard medical plan</description>
    <fields>
        <fullName>ACal_L_D_Expiration_Date__c</fullName>
        <label>ACal L&amp;D Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACal_L_D_Licence__c</fullName>
        <label>ACal L&amp;D Licence #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <label>Account Executive</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RecordType_Name__c</fullName>
        <formula>Opportunity__r.Account_RecordType_Name__c</formula>
        <label>Account RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SFDC_ID__c</fullName>
        <formula>Opportunity__r.Account.SFDC_Auto_Number__c</formula>
        <label>Account SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>Opportunity__r.Account_Status__c</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuditorName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auditor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sold_Case_Notification1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefits_Subject_to_ERISA_Regulations__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Benefits Subject to ERISA Regulations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingContact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity_Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sold Case Notification (Contact)</relationshipLabel>
        <relationshipName>Sold_Case_Notification3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_E_mail__c</fullName>
        <description>This field split from Billing Contact - Name, Phone, E-mail</description>
        <label>Billing Contact  E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone__c</fullName>
        <description>Billing Contact - Name, Phone, E-mail</description>
        <label>Billing Contact   Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Street_Address__c</fullName>
        <description>Billing Address of Employee</description>
        <label>Billing Street Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Broker_Agency__c</fullName>
        <label>Broker Agency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <label>Broker Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_Members_with_this_Group1__c</fullName>
        <label>COBRA Members with this Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA__c</fullName>
        <label>COBRA?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>COBRA_Members_with_this_Group1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cal_Cobra__c</fullName>
        <label>Cal Cobra?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>COBRA_Members_with_this_Group1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_BA__c</fullName>
        <description>This field split from &quot;City / State / Zip Code&quot;</description>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloned_from__c</fullName>
        <inlineHelpText>Please do not change this field.</inlineHelpText>
        <label>Cloned from</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobra_Members_with_this_Group__c</fullName>
        <label>COBRA Type for this Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COBRA</fullName>
                </value>
                <value>
                    <fullName>Cal COBRA</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commissions_Medical__c</fullName>
        <label>Commissions - Medical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissions_Optional_Acu_Chiro_ACN__c</fullName>
        <label>Commissions - Optional Acu-Chiro (ACN)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commissions_Optional_Dental_Delta__c</fullName>
        <label>Commissions - Optional Dental (Delta)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commissions_Optional_Vision_VSP__c</fullName>
        <label>Commissions - Optional Vision (VSP)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>the name of the employee company name</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sold_Case_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_SA__c</fullName>
        <label>Country_SA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the user Value for a Rejected SCN</description>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sold_Case_Notification2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Stage_Aging__c</fullName>
        <description>Gives the current aging based on stage</description>
        <formula>CASE(Stage__c , &apos;Completed&apos;,( 9 * ( 
( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1996, 1, 1) ) / 7) + 
MIN(5, 
MOD( DATEVALUE(NOW() ) - DATE( 1996, 1, 1), 7) + 
MIN( 1, 24 / 9 * ( MOD(NOW() - DATETIMEVALUE( &apos;1996-01-01 15:00:00&apos; ), 1 ) ) ) 
) 
) - ( 5 * FLOOR( ( DATEVALUE( Enrollment_Start_Time__c ) - DATE( 1996, 1, 1) ) / 7) + 
MIN( 5, MOD( DATEVALUE( Enrollment_Start_Time__c ) - DATE( 1996, 1, 1), 7 ) + 
MIN( 1, 24 / 9 * ( MOD( Enrollment_Start_Time__c - DATETIMEVALUE( &apos;1996-01-01 15:00:00&apos; ), 1) ) ) 
) ) ) ),&apos;Underwriting Review&apos;,(9 * ( 
( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1996, 1, 1) ) / 7) + 
MIN(5, 
MOD( DATEVALUE(NOW() ) - DATE( 1996, 1, 1), 7) + 
MIN( 1, 24 / 9 * ( MOD(NOW() - DATETIMEVALUE( &apos;1996-01-01 15:00:00&apos; ), 1 ) ) ) 
) 
) - ( 5 * FLOOR( ( DATEVALUE( Underwriting_Start_Time__c ) - DATE( 1996, 1, 1) ) / 7) + 
MIN( 5, MOD( DATEVALUE( Underwriting_Start_Time__c ) - DATE( 1996, 1, 1), 7 ) + 
MIN( 1, 24 / 9 * ( MOD( Underwriting_Start_Time__c - DATETIMEVALUE( &apos;1996-01-01 15:00:00&apos; ), 1) ) ) 
) ) ) ),IF( NOT(ISPICKVAL( Stage__c ,&apos;Approved&apos;)),( 9 * (
   ( 5 * FLOOR( ( DATEVALUE( NOW()  ) - DATE( 1996, 1, 1) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE(NOW() ) - DATE( 1996, 1, 1), 7) +
     MIN( 1, 24 / 9 * ( MOD(NOW() - DATETIMEVALUE( &apos;1996-01-01 15:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( Draft_Start_Time__c ) - DATE( 1996, 1, 1) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE(  Draft_Start_Time__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 9 * ( MOD(  Draft_Start_Time__c - DATETIMEVALUE( &apos;1996-01-01 15:00:00&apos; ), 1) ) )
    )
   ) 
  )),0 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage Aging(Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <inlineHelpText>DBA Name (if applicable)</inlineHelpText>
        <label>DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_EOC_Sent__c</fullName>
        <label>Date EOC Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SBC_Sent__c</fullName>
        <label>Date SBC Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sold__c</fullName>
        <description>Req 3268</description>
        <label>Date Sold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_List__c</fullName>
        <description>Req 3268</description>
        <label>Distribution List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Draft_Start_Time__c</fullName>
        <label>Draft Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Draft_hours__c</fullName>
        <label>Draft hours</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDI_Vendor_E_Mail__c</fullName>
        <label>EDI Vendor E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EDI_Vendor_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Req-3384</description>
        <label>EDI Vendor Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Archive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sold Case Notification (Contact)</relationshipLabel>
        <relationshipName>Sold_Case_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EDI_Vendor_Phone__c</fullName>
        <description>Req-3384</description>
        <label>EDI Vendor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Employer_Type__c</fullName>
        <formula>IF(TEXT(Opportunity__r.Account.Employer_Type__c) != NULL &amp;&amp; TEXT(Opportunity__r.Account.Employer_Type__c) != &apos;&apos;,TEXT(Opportunity__r.Account.Employer_Type__c),&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Employer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Waiting_Period_Other__c</fullName>
        <description>This field will display when user select  &quot;Employee Waiting Period&quot; in picklist and value is &quot;Other&quot;</description>
        <label>Employee Waiting Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Waiting_Period__c</fullName>
        <label>Employee Waiting Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Contribution_Dependents_Premium__c</fullName>
        <label>Employer Contribution-DependentsPremium%</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contribution_Employees_Premium__c</fullName>
        <label>Emplr Cont.-Employees % or $ of Premium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Defined_Eligibility_for_Benefit__c</fullName>
        <label>Employer Defined Eligibility For Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20 Hours</fullName>
                </value>
                <value>
                    <fullName>30 Hours</fullName>
                </value>
                <value>
                    <fullName>40 Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Type__c</fullName>
        <formula>IF( Sold_Sign_Off__c &lt;&gt; NULL,Sold_Sign_Off__r.Employer_Type__c, Opportunity__r.Employer_Type__c)</formula>
        <label>Employer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Method__c</fullName>
        <label>Enrollment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Start_Time__c</fullName>
        <label>Enrollment Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Enrollment hours</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Federal_Employer_ID_Number__c</fullName>
        <label>Federal Employer ID Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Commission__c</fullName>
        <formula>Opportunity__r.GA_Commission__c</formula>
        <label>GA Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GA_Contact__c</fullName>
        <formula>Opportunity__r.GA_Contact__r.FirstName &amp; &apos; &apos; &amp;  Opportunity__r.GA_Contact__r.LastName</formula>
        <label>GA Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Agent_Applicable__c</fullName>
        <formula>Opportunity__r.General_Agent_Applicable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Agent Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Agent__c</fullName>
        <formula>Opportunity__r.General_Agent__r.Name</formula>
        <label>General Agent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HREmployer_Portal_Name1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Employer Portal Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity_Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sold Case Notification (Contact)</relationshipLabel>
        <relationshipName>Sold_Case_Notification4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HREmployer_Portal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Employer Portal Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity_Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sold Case Notification (Contact)</relationshipLabel>
        <relationshipName>Sold_Case_Notification5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HREnrollment_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HREnrollment Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity_Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sold Case Notification (Contact)</relationshipLabel>
        <relationshipName>Sold_Case_Notification2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Account_Number__c</fullName>
        <label>HR Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Employer_Portal_E_mail1__c</fullName>
        <description>This field split from HR Employer Portal Access - Name, Title, Phone, E-mail</description>
        <label>HR Employer Portal E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HR_Employer_Portal_E_mail__c</fullName>
        <description>This field split from HR Employer Portal Access - Name, Title, Phone, E-mail</description>
        <label>HR Employer Portal E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HR_Employer_Portal_Name1__c</fullName>
        <description>This field split from HR Employer Portal Access - Name, Title, Phone, E-mail</description>
        <label>HR Employer Portal Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Employer_Portal_Name__c</fullName>
        <description>This field split from HR Employer Portal Access - Name, Title, Phone, E-mail</description>
        <label>HR Employer Portal Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Employer_Portal_Phone1__c</fullName>
        <description>This field split from HR Employer Portal Access - Name, Title, Phone, E-mail</description>
        <label>HR Employer Portal Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HR_Employer_Portal_Phone__c</fullName>
        <description>This field split from HR Employer Portal Access - Name, Title, Phone, E-mail</description>
        <label>HR Employer Portal Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HR_Enrollment_E_mail__c</fullName>
        <description>This field split from HR/Enrollment Contact - Name, Phone, E-mail</description>
        <label>HR/Enrollment  E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HR_Enrollment_Phone__c</fullName>
        <description>this field spilt from HR/Enrollment Contact - Name, Phone, E-mail</description>
        <label>HR/Enrollment  Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Have_the_plan_numbers_changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Visible only for Renewal SCN</description>
        <label>Have the plan numbers changed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Plan_Notes__c</fullName>
        <label>Medical Plan Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Region__c</fullName>
        <label>Medical Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_accumulators_previous_Carrier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Accumulators Previous  Carrier?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_EDI_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New EDI Vendor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_TPA_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Visible only for Renewal SCN</description>
        <label>New TPA Vendor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_SCN_Id__c</fullName>
        <label>Old SCN Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Date_From__c</fullName>
        <description>This field split  from Open Enrollment Date Range</description>
        <label>Open Enrollment Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Date_To__c</fullName>
        <description>This field split from Open Enrollment Date Range</description>
        <label>Open Enrollment Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to implement the Lookup filter on Contact. It will be autopopulated with the Opportunity&apos;s Account Name. DO NOT Put on page layout</description>
        <inlineHelpText>Please do not change the Opportunity Account Name value</inlineHelpText>
        <label>Opportunity Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sold Case Notification</relationshipLabel>
        <relationshipName>Sold_Case_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sold Case Notification</relationshipLabel>
        <relationshipName>Sold_Case_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_ERISA__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Language_Considerations__c</fullName>
        <label>Other Language Considerations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Optional_Acu_Chiro__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Optional_Dental__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Optional_Vision__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_or_Implementation__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <inlineHelpText>Performance or Implementation Performance Guarantees (if applicable - if not, N/A)</inlineHelpText>
        <label>Performance or Implementation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <formula>Opportunity__r.Plan_Year__c</formula>
        <label>Plan Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_vs_Calendar_Year__c</fullName>
        <label>Plan vs Calendar Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan Year</fullName>
                </value>
                <value>
                    <fullName>Calendar Year</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Group_Insurance_through_SHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Group Insurance Through SHP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projected_Enrollment__c</fullName>
        <label>Projected Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Religious_Exemption_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Birth control coverage not provided due to religious exemption</inlineHelpText>
        <label>Religious Exemption Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_SCN__c</fullName>
        <formula>Opportunity__r.Renewed_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal SCN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCN_Approved_Date__c</fullName>
        <description>To track the approval date of SCN at the back end</description>
        <label>SCN Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCN_Survey_Sent_Date__c</fullName>
        <label>SCN Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Broker_ID__c</fullName>
        <label>SFDC Broker ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Broker_ID__c</fullName>
        <label>SHP Broker ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Sales_Representative__c</fullName>
        <label>Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sold_Case_Notification3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_County__c</fullName>
        <label>County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slice_Account__c</fullName>
        <label>Proposal Scenario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TR/Sole Carrier</fullName>
                </value>
                <value>
                    <fullName>Slice</fullName>
                </value>
                <value>
                    <fullName>Triple Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Slicing_with_Carrier_Name__c</fullName>
        <label>Slicing with Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Case_Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Case Notification</label>
        <referenceTo>Employer_Group_Data__c</referenceTo>
        <relationshipLabel>Sold Case Notification</relationshipLabel>
        <relationshipName>Sold_Case_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_Sign_Off__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Sign Off</label>
        <referenceTo>Sold_Sign_Off__c</referenceTo>
        <relationshipLabel>Sold Case Notification</relationshipLabel>
        <relationshipName>Sold_Case_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Underwriting Review</fullName>
                </value>
                <value>
                    <fullName>Rejected by Underwriting</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Enrollment QA Pass</fullName>
                </value>
                <value>
                    <fullName>Enrollment QA Fail</fullName>
                </value>
                <value>
                    <fullName>Submitted for QA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_BA__c</fullName>
        <description>This field split from &quot;City / State / Zip Code&quot;</description>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>